# netwatch

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  tarpaulin.toml
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  format.ts  netwatch.ts  types.ts
frontend/src/components/: Badge.module.scss  Badge.tsx  EmptyState.module.scss  EmptyState.tsx  Layout.module.scss  Layout.tsx  Pagination.module.scss  Pagination.tsx  StatusChart.module.scss  StatusChart.tsx  Switch.module.scss  Switch.tsx
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  MonitorDetailPage.tsx  MonitorFormPage.tsx  MonitorsPage.tsx  SettingsPage.tsx  StatusPage.tsx  pages.module.scss
frontend/src/styles/: global.scss
migrations/: 0001_init.sql  0002_simplify_check_results.sql  0003_check_aggregates.sql  0004_integer_monitor_ids.sql  0005_check_result_messages.sql
scripts/: reset-db.sh
src/: config.rs  error.rs  main.rs  state.rs  test_support.rs
src/domain/: alert.rs  check.rs  mod.rs  monitor.rs
src/notify/: mod.rs  webhook.rs
src/probes/: dns.rs  http.rs  icmp.rs  mod.rs  observation.rs  tcp.rs
src/scheduler/: compact.rs  evaluator.rs  flush.rs  mod.rs  worker.rs
src/storage/: aggregates.rs  alerts.rs  checks.rs  db.rs  migrations.rs  mod.rs  monitors.rs  time.rs
src/web/: docs.rs  mod.rs  router.rs  ui.rs
src/web/api/: alerts.rs  checks.rs  mod.rs  monitors.rs  status.rs
